Sun Oct 19 08:14:51 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/exactphrasepostlist.cc: We never try to build an
	  ExactPhrasePostList over 0 or 1 terms, so simply assert we don't,
	  rather than having an explicit check for it in the code.

Sun Oct 12 06:08:05 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Oct 10 11:18:43 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/chert/chert_btreebase.cc,backends/chert/chert_table.cc:
	  Only full sync the final base file written.

Fri Oct 10 03:20:03 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/debuglog.h: Suppress unused typedef warnings from debugging
	  logging macros, which occur in functions which always exit via
	  throwing an exception.

Thu Oct 09 23:01:37 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,
	  backends/brass/brass_spellingwordslist.cc,
	  backends/chert/chert_database.cc,
	  backends/chert/chert_spellingwordslist.cc,matcher/mergepostlist.cc:
	  Fix mismatched return type in debug logging annotations so that code
	  compiles when configured with --enable-log.  These are already fixed
	  on trunk.

Thu Oct 09 22:59:34 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/pretty.h: Fix debug logging code to compile with clang.
	  (fixes #657, reported by Germán M. Bravo)

Thu Oct 09 10:41:59 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/Makefile.am: Remove .replicatmp upon "make clean".

Thu Oct 09 10:31:53 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/overview.rst: Add missing database path to example of using
	  xapian-progsrv in a stub database file.

Thu Oct 09 10:26:48 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/fdtracker.cc: Fix code typo in recent change to skip
	  apparent leaks of /dev/urandom.
